--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "input-otp": "^1.4.1",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
+    "novel": "^0.5.0",
+    "prisma-slug": "^1.0.0-beta.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
