--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "repairshop",
+  "name": "cemas-ri",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -29,12 +29,14 @@
     "drizzle-orm": "^0.35.3",
     "drizzle-zod": "^0.5.1",
     "lucide-react": "^0.452.0",
-    "next": "^15.1.1",
+    "next": "^15.1.3",
     "next-safe-action": "^7.10.2",
     "next-themes": "^0.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.53.1",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
